--- a/src/components/MatrixRain/MatrixRain.scss
+++ b/src/components/MatrixRain/MatrixRain.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   z-index: -1;
-  background: black;
+  background: transparent;
 
   // 顶部黑色向下透明渐变，营造过渡感
   &::after {
