--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,13 @@ html, body {
   width: 100%;
   height: 100%;
   color: white;
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 html {
