feat：统一整体样式

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -17,7 +17,7 @@
     }
 
     h2 {
-      font-size: 2rem;
+      font-size: $section-title-size;
       color: $theme-orange;
       letter-spacing: 4px;
       margin: 0;
