--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -10,7 +10,7 @@
 
 .projects-title {
   color: $theme-orange;
-  font-size: 2.5rem;
+  font-size: $section-title-size;
   text-transform: uppercase;
   margin-bottom: 50px;
   text-align: center;
