--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$theme-orange: #ff8c00;
+$theme-orange: #ff8000;
 $theme-black: #000000;
 $theme-dark-gray: #0a0a0a;
 $glow-color: rgba(255, 140, 0, 0.3); // 减弱发光颜色透明度
